[SC-11215] fixed cashflow details scroll and z-index

--- a/src/app/cfo/cashflow/cashflow.component.less
+++ b/src/app/cfo/cashflow/cashflow.component.less
@@ -1177,7 +1177,7 @@
             border-left: 1px solid @tableBorderColor;
             padding: 0 15px 0 24px;
             background: #fff;
-            z-index: 3;
+            z-index: 4;
             transform: translate(0, 0) !important;
 
             .resize-buttons {
